objects/ssot__Medication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AlternateBrandName__c</fullName>
        <label>Alternate Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BatchNumber__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Medication Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerId__c</fullName>
        <label>Manufacturer</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationCategory__c</fullName>
        <label>Medication Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationCodeId__c</fullName>
        <label>Medication Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationFormId__c</fullName>
        <label>Medication Form</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationStatus__c</fullName>
        <label>Medication Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityDenominatorNumber__c</fullName>
        <label>Quantity Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityDenominatorUnitId__c</fullName>
        <label>Quantity Denominator Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityNumeratorNumber__c</fullName>
        <label>QuantityNumerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityNumeratorUnitId__c</fullName>
        <label>Quantity Numerator Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitId__c</fullName>
        <label>QuantityUnit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725640792_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication_MedicationCodeId_map_Code_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>Medication_MedicationCodeId_map_Code_rel</relationshipLabel>
        <relationshipName>rel_1716725640792_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725644290_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication_ManufacturerId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Medication_ManufacturerId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1716725644290_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725648680_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication_MedicationFormId_map_Code_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>Medication_MedicationFormId_map_Code_rel</relationshipLabel>
        <relationshipName>rel_1716725648680_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>